RegionScore: Chrome: fixed scrollbars; FF: fixed 'log' inputbox

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ html, body {
 }
 
 #map {
-    overflow: visible; 
+    overflow: visible;
     height: 100%;
     width: 100%;
 }
@@ -1207,6 +1207,18 @@ table.artifact .portal {
 .cellscore .ui-accordion-header-active:before {
 	content: "⊟";
 }
+
+.cellscore .ui-accordion-content {
+  overflow:hidden !important;
+}
+
+@-moz-document url-prefix() {
+ .cellscore .logscale {
+    transform: scale(0.5) translate(0,-18px);
+    vertical-align: top !important;
+  }
+}
+
 g.checkpoint:hover circle {
   fill-opacity: 1;
   stroke-width: 2px;
